<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <gov.xiangan.publicsanitation.utils.AutoPlayGallery
        android:id="@+id/photo_autoGallery"
        android:layout_width="fill_parent"
        android:layout_height="150dp" />

    <TextView
        android:id="@+id/photo_textView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/photo_autoGallery"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/location"
        android:gravity="center"
        android:text="@string/photo_location" />

    <Spinner
        android:id="@+id/photo_spinner1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/photo_textView1"
        android:layout_alignTop="@+id/photo_textView1"
        android:layout_margin="10dp"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/photo_textView1" />

    <RelativeLayout
        android:id="@+id/photo_relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
         android:layout_below="@+id/photo_spinner1"
        android:background="@color/White" >

        <EditText
            android:id="@+id/photo_edit_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@+id/photo_search"
            android:background="#00000000"
            android:hint="请输入您要查找的单位名称"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/photo_search"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="15dp"
            android:alpha="0.5"
            android:background="@drawable/v5_bottom_bar_search_icon_pressed_light" />
    </RelativeLayout>

    <gov.xiangan.publicsanitation.widget.DrawableHorizontalButton
        android:id="@+id/photo_button1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/photo_relative"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_btn_blue"
        android:drawableLeft="@drawable/icon27"
        android:text="@string/photo_btn1"
        android:textColor="@color/White" />

    <gov.xiangan.publicsanitation.widget.DrawableHorizontalButton
        android:id="@+id/photo_button2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/photo_button1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_btn_orange"
        android:drawableLeft="@drawable/icon28"
        android:text="@string/photo_btn2"
        android:textColor="@color/White"
        android:textSize="12sp" />


</RelativeLayout>