<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/loginpage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_bg" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/lgoin_accounts"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_edit"
                android:hint="@string/account"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ffffff"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_edit"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="12.0dip"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ffffff"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edit"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="12.0dip"
                    android:text="验 证 码:"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/vc_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:maxLength="4"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/vc_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/code"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:paddingTop="5.0dip"
            android:text="@string/login"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <RelativeLayout
            android:id="@+id/lookpw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_weight="1" >

            <CheckBox
                android:id="@+id/auto_save_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/checkbox_bg1"
                android:drawablePadding="4.0dip"
                android:text="@string/auto_save_password"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />

            <Button
                android:id="@+id/regist_btn"
                android:layout_alignBottom="@id/auto_save_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:gravity="left|center"
                android:paddingLeft="8.0dip"
                android:paddingRight="18.0dip"
                android:text="@string/register2"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" 
            android:orientation="horizontal"
            android:layout_below="@id/lookpw"
            android:background="#00000000">
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>